updated: responsiveness of web

--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -564,7 +564,7 @@
               <!-- Entity Types Ends Here -->
 
               <!-- Date of Birth starts-->
-              <div>
+              <div class="col-span-2 lg:col-span-1">
                 <p class="text-sm text-grey-two dark:text-dark-grey-four-color">
                   Date of Birth
                 </p>
@@ -783,7 +783,7 @@
               <!-- City Ends here -->
 
               <!-- Customer Address starts -->
-              <div class="w-full mt-2.5 xl:col-span-2">
+              <div class="w-full mt-2.5 xl:col-span-2 col-span-2 lg:col-span-1">
                 <label
                   for="cstmrAddress"
                   class="text-sm text-grey-two dark:text-dark-grey-four-color"
