--- a/confirmPI.html
+++ b/confirmPI.html
@@ -369,7 +369,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-3 pt-4">
           <!-- Customer Summary Section Start -->
           <div
-            class="bg-white dark:bg-[#262C36] w-full rounded border border-grey-six px-3 py-2"
+            class="bg-white dark:bg-[#262C36] w-full rounded border border-grey-six px-3 py-2 col-span-2 xl:col-span-1"
           >
             <p
               class="text-grey-two font-semibold pb-2 border-b border-b-[#e8e7e7] dark:text-cyan-50"
@@ -517,7 +517,7 @@
 
           <!-- Condition Starts Here -->
           <div
-            class="bg-white dark:bg-[#262C36] w-full rounded border border-grey-six px-3 py-2"
+            class="bg-white dark:bg-[#262C36] w-full rounded border border-grey-six px-3 py-2 col-span-2 xl:col-span-1 mt-3 xl:mt-0"
           >
             <p
               class="text-grey-two font-semibold pb-2 border-b border-b-[#e8e7e7] dark:text-cyan-50"
