updated: responsiveness issue in page4

--- a/generatePi.html
+++ b/generatePi.html
@@ -225,12 +225,12 @@
           class="border border-primary-color bg-[#1735591a] rounded flex justify-between items-center dark:border-dark-primary-color"
         >
           <p
-            class="px-3 text-grey-two text-xl font-semibold dark:text-grey-six"
+            class="px-3 text-grey-two text-base lg:text-xl font-semibold dark:text-grey-six"
           >
             Grand Total Price
           </p>
           <p
-            class="px-3 text-xl font-semibold text-grey-two dark:text-grey-six"
+            class="px-3 text-base lg:text-xl font-semibold text-grey-two dark:text-grey-six"
           >
             CIF <span class="font-bold text-red-500">USD 72,646</span>
           </p>
