updated: responsive issue resolved in confirmPI

--- a/confirmPI.html
+++ b/confirmPI.html
@@ -2000,7 +2000,7 @@
       </div>
 
       <!-- Payment Method Starts here -->
-      <div class="grid grid-cols-2 gap-x-2 mt-3">
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-2 mt-3">
         <div
           class="bg-white px-3 border border-grey-six dark:bg-dark-background-color dark:text-white py-2 rounded"
         >
@@ -2037,7 +2037,7 @@
           </div>
         </div>
         <div
-          class="bg-white px-3 border border-grey-six dark:bg-dark-background-color dark:text-white py-2 rounded overscroll-none"
+          class="mt-3 lg:mt-0 bg-white px-3 border border-grey-six dark:bg-dark-background-color dark:text-white py-2 rounded overscroll-none"
         >
           <p>Message to Otoz.ai Japan</p>
           <textarea
