car gallery opens in new tab now

--- a/choosecar.html
+++ b/choosecar.html
@@ -514,7 +514,7 @@
 
                 <td class="px-4 py-2 text-[13px]">
                   <div class="flex gap-x-1">
-                    <a href="./cargallery.html">
+                    <a href="./cargallery.html" target="_blank">
                       <img
                         src="./assets/galleryIcon.svg"
                         alt="galleryIcon"
